--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,4 +1,8 @@
 <h1>Welcome to Bookshelves!</h1>
+    <p>
+        Keep track of all the books you've read with Bookshelves. 
+        To get started, sign up or log in. 
+    </p>
 
-<a href="/login">Log In</a><br>
-<a href="/signup">Sign Up</a>
+    <a href="/login"><button type="submit">Log In</button></a>
+    <a href="/signup"><button type="submit">Sign Up</button></a>
