--- a/app/views/books/books.erb
+++ b/app/views/books/books.erb
@@ -1,13 +1,14 @@
-<h1>My Books</h1>
-
+<h2><%= @user.username %>'s Bookshelf</h2>
 
 <% @books.each do |book| %>
    <h3><%= book.name %> <br></h3>
     By: <%= book.author %> <br>
     Genre: <%= book.genre %> <br>
     My Rating: <%= book.rating %><br>
-    <a href="/books/<%= book.id %>/edit">Edit</a><br><br>
+    <a href="/books/<%= book.id %>/edit">Edit</a><br>
 <% end %>
 <br>
+<br>
 <p><a href="./books/new">Add a Book</a></p>
+<p><a href="/logout">Log Out</a></p>
 
