--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,12 +14,17 @@
     <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
   <body>
+
     <div class="wrapper">
 
         <%= yield %>
 
       <footer class="branding">
-        <small>&copy; 2021 <strong>BookshelfApp</strong></small>
+        <small>&copy; 2021 <strong>BookshelfApp</strong>
+        •
+        <a href="/books">My Books</a>
+        •
+        <a href="/logout">Log Out</a></small>
       </footer>
     </div>
 
