--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -12,12 +12,20 @@
   }
 
   /* --- Welcome Page Styles --- */
+  head {
+    font-size: 36px;
+    line-height: 54px;
+  }
+  
+  
   body {
     background-color: #265b5f;
     color: #333;
     font-family: Sans-Serif;
     line-height: 18px;
   }
+
+
 
   .wrapper {
     background: #fff;
