--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -5,7 +5,7 @@
 <h1>User Sign Up</h1>
 
 <form action="/signup" method="POST">
-  <p>Name: <input type="text" name="username"></p>
-  <p>Password: <input type="text" name="password"></p>
+  <p>Name: <input type="text" name="username" required></p>
+  <p>Password: <input type="text" name="password" required></p>
   <input type="submit">
 </form>
