--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h1>Login to Bookshelves!</h1>
 <form method="post" action="/login">
-  <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="password" placeholder="Password:">
+  Username: <input type="text" name="username" placeholder="username" required><br>
+  Password: <input type="text" name="password" placeholder="password" required>
 
   <input type="submit" value="submit">
 </form>
