--- a/app/views/books/books.erb
+++ b/app/views/books/books.erb
@@ -1,14 +1,16 @@
 <h2><%= @user.username %>'s Bookshelf</h2>
-
+<br>
+<br>
 <% @books.each do |book| %>
    <h3><%= book.name %> <br></h3>
     By: <%= book.author %> <br>
     Genre: <%= book.genre %> <br>
     My Rating: <%= book.rating %><br>
-    <a href="/books/<%= book.id %>/edit">Edit</a><br>
+    <a href="/books/<%= book.id %>/edit"><button type="submit">Edit</a></button><br>
 <% end %>
 <br>
 <br>
-<p><a href="./books/new">Add a Book</a></p>
-<p><a href="/logout">Log Out</a></p>
+<a href="/books/new"><button type="submit">Add a Book</button></a>
+
+
 
