--- a/app/views/books/show.erb
+++ b/app/views/books/show.erb
@@ -4,10 +4,9 @@ Genre: <%= @book.genre %> <br />
 Rating: <%= @book.rating %> <br />
 
 
+<a href="/books/<%= @book.id %>/edit"><button type="submit">Edit</a></button>
+
 <form method="post" action="/books/<%= @book.id %>">
   <input id="hidden" type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Book">
 </form>
-
-
-<a href="/books/<%= @book.id %>/edit">Edit Book </a>
