--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,7 @@
 <h1>Login to Bookshelves!</h1>
 <form method="post" action="/login">
   Username: <input type="text" name="username" placeholder="username" required><br>
-  Password: <input type="text" name="password" placeholder="password" required>
-
-  <input type="submit" value="submit">
+  Password: <input type="password" name="password" placeholder="password" required>
+  <br>
+  <input type="submit" value="Submit">
 </form>
