--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -6,6 +6,6 @@
 
 <form action="/signup" method="POST">
   <p>Name: <input type="text" name="username" required></p>
-  <p>Password: <input type="text" name="password" required></p>
+  <p>Password: <input type="password" name="password" required></p>
   <input type="submit">
 </form>
