--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -59,6 +59,17 @@
     margin-bottom: 18px;
   }
 
+  .button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 12px;
+  }
+
   .main {
     overflow: hidden;
   }
