reverting button formatting

--- a/app/views/books/books.erb
+++ b/app/views/books/books.erb
@@ -6,7 +6,7 @@
     By: <%= book.author %> <br>
     Genre: <%= book.genre %> <br>
     My Rating: <%= book.rating %><br>
-    <a href="/books/<%= book.id %>/edit"><button type="submit">Edit</a></button><br>
+    <a href="/books/<%= book.id %>/edit"><button type="submit">Edit</a></button><br><br>
 <% end %>
 <br>
 <br>
